--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "display": "standalone",
   "orientation": "portrait",
   "Scope": "/",
-  "start_url": "/Basic-PWA/",
+  "start_url": "/PWA_Workshop/",
   "icons": [
     {
       "src": "icons/icon-72x72.png",
